Extract CSS from logo.html into logo.css

--- a/logo5.html
+++ b/logo5.html
@@ -2,7 +2,6 @@
 <html lang="pl">
 	<head>
 		<meta charset="utf-8" />
-                <title>Moja Strona</title>
 		<style>
 			div { width: 256px; height: 192px; display: block; }
 			img { width: 200px; height: 94px; }
@@ -13,11 +12,10 @@
 		<script src="logo_jq.js"></script>
 	</head>
 	<body>
-                <h1 class="title">Mój Nagłówek</h1>
 		<table>
 			<tr>
 				<td>
-					<div class="right"></div>
+					<div class="left"></div>
 				</td>
 				<td>
 					<div class="right"></div>
